Wrap TOTP styles to avoid spilling over to other components

--- a/settings/src/components/totp.scss
+++ b/settings/src/components/totp.scss
@@ -1,142 +1,144 @@
-.wporg-2fa__totp_setup-container {
-	position: relative;
+.wporg-2fa__totp {
+	.wporg-2fa__totp_setup-container {
+		position: relative;
 
-	p {
-		margin-top: unset;
-	}
+		p {
+			margin-top: unset;
+		}
 
-	> .components-button {
-		position: absolute;
-		right: 0;
-		bottom: -10px;
-		text-decoration: none !important;
-	}
+		> .components-button {
+			position: absolute;
+			right: 0;
+			bottom: -10px;
+			text-decoration: none !important;
+		}
 
-	> .components-notice {
-		width: 100%;
-	}
+		> .components-notice {
+			width: 100%;
+		}
 
-	.wporg-2fa__totp_setup-instruction {
-		max-width: 550px;
-		margin-bottom: 32px;
-		align-self: center;
-		margin-top: revert;
-	}
-}
-
-.wporg-2fa__totp_setup-method-container {
-	max-width: 360px;
-	align-self: center;
-
-	.components-button {
-		width: fit-content;
-	}
-
-	p {
-		margin: 0;
-	}
-
-	@media screen and (max-width: 480px) {
-		max-width: unset;
-		width: 100%;
-	}
-}
-
-.wporg-2fa__setup-form-container {
-	width: fit-content;
-    align-self: center;
-	text-align: center;
-
-	& > .components-notice.is-error {
-		opacity: 0;
-		height: 0;
-		margin-bottom: -32px; /* padding + gap */
-
-		&.is-shown {
-			transition: opacity 0.5s ease;
-			margin-bottom: 16px;
-			height: auto;
-			opacity: 1;
+		.wporg-2fa__totp_setup-instruction {
+			max-width: 550px;
+			margin-bottom: 32px;
+			align-self: center;
+			margin-top: revert;
 		}
 	}
 
-	@media screen and (max-width: 480px) {
-		width: 100%;
+	.wporg-2fa__totp_setup-method-container {
+		max-width: 360px;
+		align-self: center;
+
+		.components-button {
+			width: fit-content;
+		}
+
+		p {
+			margin: 0;
+		}
+
+		@media screen and (max-width: 480px) {
+			max-width: unset;
+			width: 100%;
+		}
 	}
-}
 
-.wporg-2fa__qr-code {
-	text-align: center;
-	height: 225px;
+	.wporg-2fa__setup-form-container {
+		width: fit-content;
+		align-self: center;
+		text-align: center;
 
-	#bbpress-forums & {
-		> a {
-			display: inline-block;
+		& > .components-notice.is-error {
+			opacity: 0;
+			height: 0;
+			margin-bottom: -32px; /* padding + gap */
 
-			&:hover,
-			&:focus {
-				box-shadow: 0 0 0 var(--wp-admin-border-width-focus) var(--wp-components-color-accent,var(--wp-admin-theme-color,#007cba));
-				outline: 3px solid transparent;
+			&.is-shown {
+				transition: opacity 0.5s ease;
+				margin-bottom: 16px;
+				height: auto;
+				opacity: 1;
+			}
+		}
+
+		@media screen and (max-width: 480px) {
+			width: 100%;
+		}
+	}
+
+	.wporg-2fa__qr-code {
+		text-align: center;
+		height: 225px;
+
+		#bbpress-forums & {
+			> a {
+				display: inline-block;
+
+				&:hover,
+				&:focus {
+					box-shadow: 0 0 0 var(--wp-admin-border-width-focus) var(--wp-components-color-accent,var(--wp-admin-theme-color,#007cba));
+					outline: 3px solid transparent;
+				}
 			}
 		}
 	}
-}
 
-.wporg-2fa__manual {
-	display: flex;
-    flex-direction: column;
-    width: fit-content;
-    align-self: center;
-	margin-bottom: 16px;
-	max-width: 360px;
-
-	.components-button {
+	.wporg-2fa__manual {
+		display: flex;
+		flex-direction: column;
 		width: fit-content;
-	}
-
-	code {
-		font-family: 'IBM Plex Mono';
-		font-style: normal;
-		font-weight: 400;
-		font-size: 15px;
-		line-height: 20px;
-		margin-top: 32px;
-	}
-	
-}
-
-.wporg-2fa__submit-btn-container {
-	width: 100%;
-    display: flex;
-    justify-content: space-between;
-
-	* {
-		flex: 1;
-		justify-content: center;
-	}
-
-	button + button {
-		margin-right: 0 !important;
-	}
-}
-
-.wporg-2fa__enabled-status {
-	color: $alert-green;
-	text-transform: uppercase;
-}
-
-.wporg-2fa__setup-form {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-self: center;
-	text-align: left;
-	
-	& > * {
+		align-self: center;
 		margin-bottom: 16px;
+		max-width: 360px;
+
+		.components-button {
+			width: fit-content;
+		}
+
+		code {
+			font-family: 'IBM Plex Mono';
+			font-style: normal;
+			font-weight: 400;
+			font-size: 15px;
+			line-height: 20px;
+			margin-top: 32px;
+		}
+
 	}
 
-	@media screen and (max-width: 480px) {
+	.wporg-2fa__submit-btn-container {
 		width: 100%;
+		display: flex;
+		justify-content: space-between;
+
+		* {
+			flex: 1;
+			justify-content: center;
+		}
+
+		button + button {
+			margin-right: 0 !important;
+		}
+	}
+
+	.wporg-2fa__enabled-status {
+		color: $alert-green;
+		text-transform: uppercase;
+	}
+
+	.wporg-2fa__setup-form {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-self: center;
+		text-align: left;
+
+		& > * {
+			margin-bottom: 16px;
+		}
+
+		@media screen and (max-width: 480px) {
+			width: 100%;
+		}
 	}
 }
